@@ -1,6 +1,8 @@
 msgDragOrSelectImageFile=Choose a file or drag it here
+msgBusyUploadingAttachment=Your attachment is being upload, please wait
 msgBusyUploadingImage=Your image is being uploaded, please wait
-msgErrorUploadingImage=There was an error in uploading image
+msgErrorUploadingImage=There was an error in uploading the image
+msgErrorUploadingAttachment=There was an error in uploading the attachment
 msgLoginFailed=You could not be logged in
 msgLoginFailedDetails=Invalid credentials were provided. Please enter the correct username and password.
 msgDeletePicturesConfirmation = Are you sure you want to permanently delete the selected pictures?
