@@ -1,5 +1,8 @@
+msgErrorUploadingAttachment=Er is een fout opgetreden tijdens het uploaden van de bijlage
+msgErrorUploadingImage=Er is een fout opgetreden tijdens het uploaden van de afbeelding
 msgDragOrSelectImageFile=Selecteer een bestand of sleep het bestand in dit vak
 msgBusyUploadingImage=Bezig met het uploaden van de afbeelding
+msgBusyUploadingAttachment=Bezig met het uploaden van de bijlage
 lblPicture=Afbeelding
 lblItemsPerPage=Items per pagina:
 msgLoginFailed=Aanmelden is mislukt
