@@ -39,6 +39,8 @@ Data Crow version 5.0  BETA V                 Released on 2024-xx-xx
   msgBusyUploadingImage
   msgErrorUploadingImage
   msgDragOrSelectImageFile
+  msgBusyUploadingAttachment
+  msgErrorUploadingAttachment
 - Web; options for references - make array of correct size (saves time)
 - Web; viewing of an item
 - Web; attachments
